<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/fui_buttonShadow">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_rules"
        android:textSize="32sp"/>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp">

        <TableRow
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/plastic"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plastic_point"
                android:textSize="18sp"
                android:paddingLeft="10dp"/>
        </TableRow>

        <TableRow
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/earth"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/earth_point"
                android:textSize="18sp"
                android:paddingLeft="10dp"/>
        </TableRow>


        <TableRow
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/recycle_game"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recycle_point"
                android:textSize="18sp"
                android:paddingLeft="10dp"/>
        </TableRow>

        <TableRow
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/garbage_bag"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/garbage_point"
                android:textSize="18sp"
                android:paddingLeft="10dp"/>
        </TableRow>

    </TableLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_marginTop="60dp"
        android:onClick="startGame"
        android:background="@android:color/holo_green_dark"
        android:elevation="10dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        android:layout_marginTop="60dp"
        android:onClick="goBack"
        android:background="@android:color/holo_green_dark"/>

</LinearLayout>